--- a/docs/final_report/FinalReport.tex
+++ b/docs/final_report/FinalReport.tex
@@ -18,52 +18,46 @@
 
 \section{Introduction}
 
-\section{Background}
-\subsection{Automatic Program Synthesis}
-\subsubsection{Previous Work in Program Synthesis}
-\subsection{Answer Set Programming}
-\subsubsection{Definitions}
-\subsubsection{Previous Work using ASP}
-\clearpage
+\section{Background: Automatic Program Synthesis}
+
+\section{Background: Answer Set Programming}
+\subsection{Definitions}
+\subsection{Previous Work using ASP}
 
 \section{Language Definitions}
 \subsection{While Language}
 \subsubsection{Syntax}
 \subsubsection{Semantics}
 \subsection{Program Specification Language}
-\clearpage
 
 \section{While Language Interpreter}
 \subsection{Program Representation}
 \subsection{Language Bias Representation}
 \subsection{Implementation}
-\clearpage
 
-\section{Program Synthesiser}
-\subsection{Synthesis of Programs from Examples}
-\subsection{Synthesis of Programs from Formulae}
+\section{Program Synthesis using Examples}
+
+\section{Program Synthesis using Formulae}
+\subsection{Synthesis of Program Fragments}
 \subsection{Synthesis of While Loop Bodies}
-\clearpage
 
 \section{Interactive Program Synthesiser}
-\clearpage
+
+\subsection{Comparison with Existing Systems}
 
 \section{Evaluation}
 \subsection{Power and Accuracy}
 \subsubsection{Extent of Capabilities}
 \subsubsection{Correctness of Generated Programs}
-\subsubsection{Comparison to Existing Systems}
 \subsection{Efficiency}
 \subsubsection{Time and Space Usage}
 \subsubsection{Number of Examples Needed}
-\subsubsection{Optimality of Generated Programs}
-\clearpage
+\subsubsection{Quality of Generated Programs}
 
 \section{Conclusions and Future Work}
 \subsection{Conclusion}
 \subsection{Possible Extensions}
 \subsection{Plans for Future Work}
-\clearpage
 
 \section{Bibliography}
 
